--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/ensdomains/dnssec-oracle-anchors.git"
   },
   "author": "Makoto Inoue",
-  "license": "BSD 2-Clause License",
+  "license": "bsd-2-clause",
   "bugs": {
     "url": "https://github.com/ensdomains/dnssec-oracle-anchors/issues"
   },
